<resources>
    <!-- Main activity -->
    <string name="app_name">PS vs XBOX</string>
    <string name="title_home">Home</string>
    <string name="goToPS">Store Playstation</string>
    <string name="goToXBOX">Store XBOX</string>
    <string name="exit">Exit Application</string>
    <string name="pop_title">Are you sure you want to leave?</string>
    <string name="pop_yes">Yes</string>
    <string name="pop_no">No</string>
    <string name="pop_buy">Buying successfully!</string>
    <string name="pop_ok">OK</string>
    <string name="buy">Buy</string>

    <!-- PS activity -->
    <string name="title_activity_ps">PS</string>
    <string name="pop_buy_PS">You have successfully bought Playstation console and/or accessories!</string>
    <string name="checkbox_console_PS">add the console PS5 in the basket</string>
    <string name="checkbox_accessoires_PS">add the accessories PS in the basket</string>


    <!-- XBOX activity -->
    <string name="title_activity_xbox">XBOX</string>
    <string name="pop_buy_XBOX">You have successfully bought XBOX console and/or accessories!</string>
    <string name="checkbox_console_XBOX">add the console XBOX in the basket</string>
    <string name="checkbox_accessoires_XBOX">add the accessories XBOX in the basket</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>