<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/colorBackground">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/xbox_vs_ps5" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/btn_XBOX"
        android:textSize="20sp"
        android:textColor="@color/colorWhitey"
        android:background="@color/colorXBOX"
        android:text="@string/goToXBOX"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/btn_PS"
        android:textSize="20sp"
        android:textColor="@color/colorWhitey"
        android:background="@color/colorPS"
        android:text="@string/goToPS"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/btn_exit"
        android:textSize="20sp"
        android:textColor="@color/colorWhitey"
        android:background="@color/colorPrimaryDark"
        android:text="@string/exit"/>

</LinearLayout>